resources/css/header.scss
$dropdown-gap: 20px;
$mega-menu-padding: 20px;
$menu-padding: 20px;
$primary-color: #ab0c2f;

:focus {
  outline: none;
  box-shadow: 0 0 0 3px #72081f;
}

header {
  position: relative !important;
  -webkit-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.1);
  -moz-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.1);
  box-shadow: 0 3px 5px rgba(57, 63, 72, 0.1);
}

.skip-link {
  position: absolute;
  top: -40px;
  left: 0;
  background: white;
  color: $primary-color;
  font-weight: bold;
  padding: 8px 16px;
  text-decoration: none;
  border-radius: 0;
  &:focus {
    top: 10px;
    left: 10px;
    border-radius: 0 !important;
    box-shadow: 0 0 0 2px black;
  }
}

.top-message {
  display: flex;
  color: white;
  padding: 15px 20px;
  font-size: 14px;
  background-color: $primary-color;
  justify-content: space-between;
}

.container {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.primary-navigation-wrapper {
  padding: $menu-padding;
  display: flex;
  align-items: center;
  justify-content: center;
}

ul.primary-navigation {
  list-style-type: none;
  display: flex;
  gap: 1em;
  padding: 0;
  margin: 0;
}

ul.primary-navigation ul.sub-menu {
  transition: all 100ms ease-in !important;

  white-space: nowrap;
  list-style: none;
  margin: 0;
  padding-left: 0;
  visibility: hidden;
  opacity: 0;
  position: absolute;
}

ul.primary-navigation li.menu-item {
  &:hover,
  &:focus-within {
    & > a {
      z-index: 2;
      background: $primary-color;
      cursor: pointer;
      outline: none;
      box-shadow: none;
      color: white;
      &:after {
        border-top: 6px solid white;
      }
    }
    & > .sub-menu {
      visibility: visible;
      opacity: 1;
    }
  }
}

ul.primary-navigation li.menu-item > a {
  display: inline-block;
  width: 100%;
  padding: 1rem;
  color: black;
  text-decoration: none;
}

ul.primary-navigation li.menu-item.menu-item-has-children {
  position: relative;
  & {
    > a {
      &:after {
        content: '';
        border: 4px solid transparent;
        border-top: 6px solid grey;
        margin-left: 10px;
        margin-bottom: 4px;
        display: inline-block;
        vertical-align: bottom;
      }
    }
  }
}

// 1st level menu items
ul.primary-navigation > li.menu-item {
  &.menu-item-has-children {
    border-bottom: $dropdown-gap solid red;
    margin-bottom: -$dropdown-gap;
  }
}

// 2nd level menu
ul.primary-navigation > li.menu-item > ul.sub-menu {
  background: white;
  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
  top: calc(100% + $dropdown-gap);
}

// 2nd level menu items
ul.primary-navigation > li.menu-item > ul.sub-menu > li.menu-item {
}

// 3rd level menu
ul.primary-navigation > li.menu-item > ul.sub-menu > li.menu-item ul.sub-menu {
  background: white;
  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
  top: 0;
  left: calc(100%);
  border-left: $dropdown-gap solid red;
  //margin-left: $dropdown-gap;
}

li.mega-menu {
  position: initial !important;
  & > ul {
    top: unset !important;
    margin-top: $dropdown-gap !important;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
    left: $mega-menu-padding;
    right: $mega-menu-padding;
    margin-left: $mega-menu-padding !important;
    position: absolute !important;
    left: 0 !important;
  }
}

